--- a/src/3-Rotating-Navigation/style.css
+++ b/src/3-Rotating-Navigation/style.css
@@ -13,6 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     transform-origin: top left;
+    transition: transform 0.5s linear;
 }
 .wrapper.show-tab{
     transform: rotate(-20deg)
@@ -36,10 +37,6 @@ img {
 }
 .wrapper.show-tab .circle{
     transform: rotate(-70deg)
-}
-.wrapper.show-tab .circle-wrapper{
-    left: -70px; 
-
 }
 .circle{
     width: 200px;
@@ -70,23 +67,23 @@ img {
     position: fixed;
     bottom: 0;
     left: 0;
-    transform: translateX(-100%);
 }
-.wrapper.show-tab + .nav-wrapper{
+.wrapper.show-tab + .nav-wrapper li{
    transform: translateX(0);
+   transition-delay: 0.3s;
 }
 .nav-container{
     color: white;
 }
 .nav-container ul{
-    list-style: none;
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
 .nav-container ul li{
     font-size: 1.3rem;
     margin-bottom: 30px;
+    transition: transform 0.4s ease-in;
 }
 .nav-container ul li i{
     font-size: 1.8rem;
@@ -97,11 +94,14 @@ img {
 }
 .nav-container ul li {
     margin-left: 1rem;
+    transform: translateX(-100%);
 }
 .nav-container ul li + li{
     margin-left: 2rem;
+      transform: translateX(-150%);
 }
 .nav-container ul li + li + li{
     margin-left: 3rem;
+      transform: translateX(-200%);
 }
 
