--- a/src/2-progress-steps/style.css
+++ b/src/2-progress-steps/style.css
@@ -17,7 +17,7 @@ body {
 .wrapper {
   text-align: center;
 }
-#progressed {
+.progress-container #progressed {
   width: 0%;
   position: absolute;
   top: 50%;
